Fixed small volume bug